upload source code

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                         </header>
                         
                         <div class="modal-body">
-                            <label for="username" class="modal-label">Tên đăng nhập</label>
-                            <input id="username" type="text" class="modal-input" placeholder="Username">
-                            <label for="password" class="modal-label">Mật khẩu</label>
-                            <input id="password" type="password" class="modal-input" placeholder="Password">
+                            <label for="" class="modal-label">Tên đăng nhập</label>
+                            <input type="text" class="modal-input" placeholder="">
+                            <label for="" class="modal-label">Mật khẩu</label>
+                            <input type="password" class="modal-input" placeholder="">
                             <label for="retype-password" class="modal-label">Nhập lại mật khẩu</label>
-                            <input id="retype-password" type="password" class="modal-input" placeholder="Password">
+                            <input id="retype-password" type="password" class="modal-input" placeholder="">
                         </div>
                             
                         <button id="login-btn">
