--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
                         
                         <div class="modal-body">
                             <label for="" class="modal-label">Tên đăng nhập</label>
-                            <input type="text" class="modal-input" placeholder="">
+                            <input type="text" class="modal-input" placeholder="Tên đăng nhập">
                             <label for="" class="modal-label">Mật khẩu</label>
-                            <input type="password" class="modal-input" placeholder="">
+                            <input type="password" class="modal-input" placeholder="Mật khẩu">
                             <label for="retype-password" class="modal-label">Nhập lại mật khẩu</label>
-                            <input id="retype-password" type="password" class="modal-input" placeholder="">
+                            <input id="retype-password" type="password" class="modal-input" placeholder="Nhập lại mật khẩu">
                         </div>
                             
                         <button id="login-btn">
