--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
                                     Xin chào, tớ là Nguyễn Công Sơn. Hiện tại tớ đang là sinh viên K68, ngành CNTT: Khoa học Máy tính của Đại học Bách Khoa Hà Nội.
                                     Bây giờ tớ đang học song song cả lập trình C++ lẫn lập trình web.
                                     Tớ là một chàng trai khá là hướng nội, nhưng mà khi đã quen thì có thể hơi tăng động xíu :v Cho nên nếu bạn muốn làm quen tớ thì mong bạn chủ động inbox tớ, chứ không là tớ ngại làm quen lắm :>
+                                </p>
+                                <p>
                                     <br>
                                     Một số thông tin cơ bản của tớ:
                                     <div class="profile-list">
@@ -233,7 +235,7 @@
                                             <p><a class="nav-button" href="https://www.facebook.com/zirconnotfound/" target="_blank" rel="noopener">Trang cá nhân</a></p>
                                         </li>
                                         <li><p><a class="nav-button" href="https://www.facebook.com/profile.php?id=100091447389849" target="_blank" rel="noopener">Blog cá nhân</a></p></li>
-                                        <li><p><a class="nav-button" href="https://forms.gle/2cwNEvNtWx71SuDRA" target="_blank" rel="noopener">Viết lưu bút ở đây</a></p></li>
+                                        <li><p><a class="nav-button" href="https://forms.gle/2cwNEvNtWx71SuDRA" target="_blank" rel="noopener">Lưu bút</a></p></li>
                                     </ul>
                                 </div>
                             </div>
