--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <!-- Phần tiêu đề -->
     <head>
         <title>
-            7 1 2 5 website
+            firstproject by me
         </title>
         <meta charset="utf-8">
     <link rel="stylesheet" href=".\assets\css\main.css">
@@ -18,7 +18,7 @@
                     <li>
                         <a href="#">
                             <i class="nav-icon ti-home"></i>
-                            7 1 2 5
+                            Home
                         </a>
                     </li>
 
@@ -232,9 +232,9 @@
                                 <div class="nav">
                                     <ul>
                                         <li>
-                                            <p><a class="nav-button" href="https://www.facebook.com/zirconnotfound/" target="_blank" rel="noopener">Trang cá nhân</a></p>
+                                            <p><a class="nav-button" href="https://www.facebook.com/mocnhan7125/" target="_blank" rel="noopener">Trang cá nhân</a></p>
                                         </li>
-                                        <li><p><a class="nav-button" href="https://www.facebook.com/profile.php?id=100091447389849" target="_blank" rel="noopener">Blog cá nhân</a></p></li>
+                                        <li><p><a class="nav-button" href="https://www.facebook.com/xanhh.duong/" target="_blank" rel="noopener">Blog cá nhân</a></p></li>
                                         <li><p><a class="nav-button" href="https://forms.gle/2cwNEvNtWx71SuDRA" target="_blank" rel="noopener">Lưu bút</a></p></li>
                                     </ul>
                                 </div>
